--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,252 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;1,400;1,500&display=swap");
+
+
+*,
+::after,
+::before {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+  background-color: #000;
+  color: #fff;
+}
+
+.container {
+  margin: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.todo-list {
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+  width: 30vw;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2em;
+}
+
+.todo-card {
+  width: 40vw;
+  min-width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 3rem;
+  border-radius: 2.5em;
+  margin-bottom: 1.3rem;
+}
+
+.todo-card input {
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  color: white;
+  font-size: 1.2rem;
+  transition: all 0.5s;
+}
+
+.todo-card input:focus {
+  width: 100%;
+  border-bottom: 1px solid white;
+}
+
+.todo-card select {
+  position: relative;
+  transform: translateX(-5px);
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-size: 1.2rem;
+  cursor: pointer;
+  margin: 0;
+  padding: 0;
+}
+
+.todo-card select:focus {
+  border: none;
+  outline: none;
+}
+
+.todo-card select option {
+  background-color: #333;
+  border: none;
+  color: white;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.title {
+  width: 50%;
+  display: flex;
+  letter-spacing: 2px;
+  font-size: 2rem;
+  font-weight: 500;
+}
+
+.btns {
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.task {
+  font-size: 1.1rem;
+  font-weight: 300;
+  letter-spacing: 0.7px;
+  margin-top: 0.7rem;
+}
+
+.todo-card .checkbox {
+  font-size: 0.9rem;
+}
+
+.btn {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: #a356c1;
+  border-radius: 45px;
+  padding: 0.6rem 0.4rem;
+  cursor: pointer;
+  color: #fff;
+  margin-top: 2rem;
+}
+
+.btn:hover {
+  background-color: #66b684;
+}
+
+.btn p {
+  font-size: 1.8rem;
+  font-weight: 500;
+  letter-spacing: 1px;
+  margin-left: 10px;
+}
+
+.day {
+  display: flex;
+  margin-top: 1rem;
+  color: rgb(196, 196, 196);
+}
+
+.day p {
+  font-size: 0.9rem;
+  display: flex;
+  align-self: flex-end;
+}
+
+.calendar {
+  font-size: 1rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right: 0.5rem;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 6px;
+  list-style: none;
+  overflow: hidden;
+}
+
+.list-item {
+  display: flex;
+}
+
+.check-label-text {
+  font-size: 0.9rem;
+}
+
+.box {
+  margin-left: 1rem;
+}
+
+button {
+  border: none;
+  box-shadow: none;
+}
+
+h1 {
+  letter-spacing: 2px;
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.form-container label p {
+  font-weight: 200;
+  letter-spacing: 1px;
+}
+
+.checkbox-label {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.checkbox-label p {
+  font-size: 0.9rem;
+}
+
+.checkbox-label .label {
+  padding: 0.5em;
+  border-radius: 5px;
+  background-color: #66b684;
+  color: black;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+.checkbox-label input {
+  display: none;
+}
+.checkbox-label input:checked {
+  display: none;
+}
+
+.checkbox-label input:checked + .label {
+  background-color: transparent;
+  color: #66b684;
+}
+
+header {
+  color: white;
+  background-color: #1c1c1c;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: felx-start;
+  padding: 1rem 0 1rem 0;
+}
+
+header h1 {
+  text-transform: uppercase;
+  font-size: 2rem;
+  letter-spacing: 4px;
+  font-weight: 600;
+  color: #ed844f;
 }
